small css fix to change .nav margin to padding as navMenu doesn't fit as it should when in a mobile browser

--- a/src/components/landingPage/LandingPage.css
+++ b/src/components/landingPage/LandingPage.css
@@ -5,7 +5,7 @@
 .landingSection{
     display: flex;
     flex-direction: column;
-    margin-top: 3.5rem;
+    margin-top: 5rem;
 }
 
 .landingTitle{
