--- a/src/components/rank/Rank.css
+++ b/src/components/rank/Rank.css
@@ -4,12 +4,12 @@
 
 .userName{
     margin: 1rem 0;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     padding: 4rem 0 0 0;
     text-shadow: 5px 5px 8px var(--clr-primary-main);
 }
 
 .rankValue{
-    font-size: 5rem;
+    font-size: 4rem;
     text-shadow: 5px 5px 6px var(--clr-primary-main);
 }
