--- a/src/containers/app/App.css
+++ b/src/containers/app/App.css
@@ -1,9 +1,8 @@
 .App {
-  min-width: fit-content;
+  min-width: 100vw;
   min-height: 100vh;
-  height: 100%;
   text-align: center;
-  width: 100%;
+  width: 100vw;
 }
 
 .center{
